app scrollbars fixed

--- a/src/App/styles.less
+++ b/src/App/styles.less
@@ -49,25 +49,35 @@
     background-color: var(--color-backgroundlight);
 }
 
-html, body, :global(#app) {
-    position: relative;
-    z-index: 0;
-    width: 100vw;
-    height: 100vh;
+html {
+    width: 100%;
+    height: 100%;
     min-width: 800px;
     min-height: 600px;
     font-family: 'Roboto', 'sans-serif';
     overflow: auto;
 
-    .router {
+    body {
         width: 100%;
         height: 100%;
-    }
 
-    .app-loader {
-        width: 100%;
-        height: 100%;
-        background-color: var(--color-background);
+        :global(#app) {
+            position: relative;
+            z-index: 0;
+            width: 100%;
+            height: 100%;
+
+            .router {
+                width: 100%;
+                height: 100%;
+            }
+
+            .app-loader {
+                width: 100%;
+                height: 100%;
+                background-color: var(--color-background);
+            }
+        }
     }
 }
 
